# manet

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cmake-format.yaml  flake.nix
.github/workflows/: ci.yaml
examples/: CMakeLists.txt  binance_codec.hpp  config.cc  config.hpp  main.cc
include/manet/: logging.hpp  reactor.hpp
include/manet/net/: concepts.hpp  dial.hpp  epoll.hpp  fstack.hpp  posix.hpp
include/manet/protocol/: concepts.hpp  status.hpp  websocket.hpp  websocket_concepts.hpp  websocket_frame.hpp
include/manet/reactor/: buffer.hpp  connection.hpp  io.hpp
include/manet/transport/: concepts.hpp  plain.hpp  status.hpp  tls.hpp  tls_bio.hpp
include/manet/utils/: base64.hpp  hexdump.hpp  logging.hpp
nix/: f-stack.nix  manet.nix  sbepp.nix  spsc-queue.nix
src/manet/net/: epoll.cc  fstack.cc  posix.cc
src/manet/protocol/: websocket.cc
src/manet/transport/: plain.cc  tls.cc  tls_bio.cc
src/manet/utils/: hexdump.cc
tests/: .clang-tidy  CMakeLists.txt  server.py
tests/cert/: test-ca.pem  test-cert.pem  test-key.pem
tests/integration/: websocket_plain.cc  websocket_test.hpp  websocket_tls.cc
tests/unit/: close_tests.cc  echo_tests.cc  foo_test.cc  transport_tests.cc  websocket_frame_tests.cc  websocket_handshake_tests.cc
tests/unit/mock/: net.cc  net.hpp  reactor.hpp  transport.hpp
